Early Stopping Implementation (#1344)
* Init commit

* Experiment API changes

* Add APIs

* Remove old es apis

* Remove logging

* Add Early Stopping implementation

* Show metrics for early stopped trials

* Clean const

* Remove pid file with completed line from metrics collector

* Add unit test

* Add EarlyStopping as unique service

* Add early stopped Trials to completed

* Fix few comments

* Generate clients and SDK

* Fix tests

* Fix goptuna test

* Remove cluster role from test

* Update observation for early stopped Trials

* Fix pv name in e2e test

* Add Katib config for Early Stopping

* Fix comment

* Remove unused gRPC Experiment spec

* Remove legacy test files

* Remove labels and conditions from example

* Modify API to be consistent with Algorithm

* Ignore no such file error

* Add comments to proto

* Add median stop implementation

* Fix few comments

* Fix unit tests

* Add o-type flag to tfevent metrics collector

* Fix es unit test

* Fix hyperband suggestion
