# pkg/apis/controller/common/v1beta1/zz_generated.deepcopy.go
@@ -47,11 +47,6 @@ func (in *AlgorithmSpec) DeepCopyInto(out *AlgorithmSpec) {
 		*out = make([]AlgorithmSetting, len(*in))
 		copy(*out, *in)
 	}
-	if in.EarlyStopping != nil {
-		in, out := &in.EarlyStopping, &out.EarlyStopping
-		*out = new(EarlyStoppingSpec)
-		(*in).DeepCopyInto(*out)
-	}
 	return
 }
 
@@ -87,6 +82,22 @@ func (in *CollectorSpec) DeepCopy() *CollectorSpec {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *EarlyStoppingRule) DeepCopyInto(out *EarlyStoppingRule) {
+	*out = *in
+	return
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new EarlyStoppingRule.
+func (in *EarlyStoppingRule) DeepCopy() *EarlyStoppingRule {
+	if in == nil {
+		return nil
+	}
+	out := new(EarlyStoppingRule)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *EarlyStoppingSetting) DeepCopyInto(out *EarlyStoppingSetting) {
 	*out = *in
 	return
@@ -105,8 +116,8 @@ func (in *EarlyStoppingSetting) DeepCopy() *EarlyStoppingSetting {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *EarlyStoppingSpec) DeepCopyInto(out *EarlyStoppingSpec) {
 	*out = *in
-	if in.EarlyStoppingSettings != nil {
-		in, out := &in.EarlyStoppingSettings, &out.EarlyStoppingSettings
+	if in.AlgorithmSettings != nil {
+		in, out := &in.AlgorithmSettings, &out.AlgorithmSettings
 		*out = make([]EarlyStoppingSetting, len(*in))
 		copy(*out, *in)
 	}
