# pkg/apis/controller/experiments/v1beta1/zz_generated.deepcopy.go
@@ -139,6 +139,11 @@ func (in *ExperimentSpec) DeepCopyInto(out *ExperimentSpec) {
 		*out = new(commonv1beta1.AlgorithmSpec)
 		(*in).DeepCopyInto(*out)
 	}
+	if in.EarlyStopping != nil {
+		in, out := &in.EarlyStopping, &out.EarlyStopping
+		*out = new(commonv1beta1.EarlyStoppingSpec)
+		(*in).DeepCopyInto(*out)
+	}
 	if in.TrialTemplate != nil {
 		in, out := &in.TrialTemplate, &out.TrialTemplate
 		*out = new(TrialTemplate)
@@ -227,6 +232,11 @@ func (in *ExperimentStatus) DeepCopyInto(out *ExperimentStatus) {
 	}
 	if in.KilledTrialList != nil {
 		in, out := &in.KilledTrialList, &out.KilledTrialList
+		*out = make([]string, len(*in))
+		copy(*out, *in)
+	}
+	if in.EarlyStoppedTrialList != nil {
+		in, out := &in.EarlyStoppedTrialList, &out.EarlyStoppedTrialList
 		*out = make([]string, len(*in))
 		copy(*out, *in)
 	}
