# pkg/apis/controller/suggestions/v1beta1/zz_generated.deepcopy.go
@@ -29,7 +29,7 @@ func (in *Suggestion) DeepCopyInto(out *Suggestion) {
 	*out = *in
 	out.TypeMeta = in.TypeMeta
 	in.ObjectMeta.DeepCopyInto(&out.ObjectMeta)
-	out.Spec = in.Spec
+	in.Spec.DeepCopyInto(&out.Spec)
 	in.Status.DeepCopyInto(&out.Status)
 	return
 }
@@ -106,6 +106,16 @@ func (in *SuggestionList) DeepCopyObject() runtime.Object {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *SuggestionSpec) DeepCopyInto(out *SuggestionSpec) {
 	*out = *in
+	if in.Algorithm != nil {
+		in, out := &in.Algorithm, &out.Algorithm
+		*out = new(commonv1beta1.AlgorithmSpec)
+		(*in).DeepCopyInto(*out)
+	}
+	if in.EarlyStopping != nil {
+		in, out := &in.EarlyStopping, &out.EarlyStopping
+		*out = new(commonv1beta1.EarlyStoppingSpec)
+		(*in).DeepCopyInto(*out)
+	}
 	return
 }
 
@@ -172,6 +182,11 @@ func (in *TrialAssignment) DeepCopyInto(out *TrialAssignment) {
 	if in.ParameterAssignments != nil {
 		in, out := &in.ParameterAssignments, &out.ParameterAssignments
 		*out = make([]commonv1beta1.ParameterAssignment, len(*in))
+		copy(*out, *in)
+	}
+	if in.EarlyStoppingRules != nil {
+		in, out := &in.EarlyStoppingRules, &out.EarlyStoppingRules
+		*out = make([]commonv1beta1.EarlyStoppingRule, len(*in))
 		copy(*out, *in)
 	}
 	return
